# Astronomical-watch-mobile

./: .gitignore  BUILD.md  DEVELOPMENT.md  LICENSE.MIT  README.md  SPEC.md  UI_REFACTOR.md  VSOP87D_SYSTEM.md  astronomical_watch.py  buildozer.spec  dev.sh  launch_vnc.sh  launch_xvfb.sh  main.py  move_to_src.sh  pyproject.toml  sync_mobile.patch
.github/: copilot-instructions.md  sync_to_mobile.sh
android_resources/: AndroidManifest_extra.xml  README.md
android_resources/res/layout/: widget_layout.xml
android_resources/res/xml/: widget_info.xml
android_resources/src/: AstroWidgetProvider.java  WidgetAutoStart.java
astro/: timescales.py
cli/: add_ntp_translations.py  awatch.py  ntp_demo.py  ntp_status.py  test_multilingual_notifications.py  test_notifications.py  test_ntp.py
docs/: ANDROID_WIDGET.md  ASTRO_TIME_SYSTEM.md  NTP_SYNC.md  NTP_SYNC_SR.md  PRECISE_EQUINOX.md  WIDGET_ALWAYS_ON.md
scripts/: list_ntp_translations.py
service/: __init__.py  widget_service.py
src/astronomical_watch/: __init__.py
src/astronomical_watch/android/: __init__.py  widget_provider.py
src/astronomical_watch/core/: astro_time_core.py  equinox.py  solar.py  timeframe.py
src/astronomical_watch/lang/: explanation_ar_card.py  explanation_bn_card.py  explanation_de_card.py  explanation_el_card.py  explanation_en_card.py  explanation_es_card.py  explanation_fa_card.py  explanation_fr_card.py  explanation_ha_card.py  explanation_he_card.py  explanation_hi_card.py  explanation_id_card.py  explanation_it_card.py  explanation_ja_card.py  explanation_ko_card.py  (+15 more)
web/: app.py
(+7 files in other folders)
